@@ -1,3 +1,8 @@
+Tue Jul 25 23:48:24 2000  George Lebl <jirka@5z.com>
+
+	* wrappers/gtk/gconf-client.c:  || doesn't mean && :).  It would
+	  consider as an above directory every directory that had a notify_id
+
 2000-07-25  James Henstridge  <james@daa.com.au>
 
 	* Makefile.am, gconf/Makefile.am: make relative symlinks rather than
